[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.1.0"
log = "0.4"
rust-argon2 = { version = "2.1.0", features = ["serde"] }
rand = { version = "0.9.0", features = ["serde"] }